--- a/manifest.json
+++ b/manifest.json
@@ -1,23 +1,18 @@
 {
   "name": "Minha Série",
   "short_name": "Série",
-  "start_url": "/index.html",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#121212",
-  "theme_color": "#1e1e1e",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
   "icons": [
-    {
-      "src": "https://cdn-icons-png.flaticon.com/128/755/755298.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    },
     {
       "src": "https://cdn-icons-png.flaticon.com/128/755/755298.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://cdn-icons-png.flaticon.com/128/755/755298.png",
+      "src": "./icons/icon-512.pnghttps://cdn-icons-png.flaticon.com/128/755/755298.png",
       "sizes": "512x512",
       "type": "image/png"
     }
